add new destination

--- a/css/app.css
+++ b/css/app.css
@@ -59,5 +59,8 @@ h2 {
 
 
 #stockholm {
-    background-color: #f32f00;
+    background-color: #f06292;
+}
+#newyork {
+    background-color: #ae52d4;
 }
